--- a/style.css
+++ b/style.css
@@ -66,3 +66,27 @@ half-width-img {
     background-position: right;
     padding: 10px 90px;
 }
+
+.experiences {
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+
+
+}
+
+.color {
+    color: orange;
+    font-weight: 700;
+}
+
+.experience-item {
+    box-shadow: 10px 10px 40px gray;
+    padding: 20px 40px;
+    width: 40%;
+
+    margin-left: 5%;
+    margin-right: 5%;
+}
