--- a/style.css
+++ b/style.css
@@ -73,7 +73,9 @@ half-width-img {
     padding-bottom: 20px;
     padding-left: 40px;
     padding-right: 40px;
-
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
 
 }
 
@@ -83,10 +85,29 @@ half-width-img {
 }
 
 .experience-item {
-    box-shadow: 10px 10px 40px gray;
+
+    box-shadow: 5px 5px 40px rgb(219, 133, 20);
     padding: 20px 40px;
     width: 40%;
-
     margin-left: 5%;
     margin-right: 5%;
+
+
+}
+
+#full-stack-developer {
+    border-left: 10px solid;
+    border-image: linear-gradient(red, orange);
+    border-image-slice: 1;
+}
+
+#baby-developer {
+    border-left: 10px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+footer p {
+    margin: 60px 10px 10px 20px;
+    text-align: center;
 }
